[tool.poetry]
name = "wattile"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^1.4.0"
requests = "^2.21.0"
scipy = "^1.9"
tables = "^3.7.0"
seaborn = "^0.11.2"
tensorboardX = "1.4"
psutil = "^5.8.0"
matplotlib = "^3.0"
torch = "^1.9.0"
tensorboard = "^2.8.0"
Pillow = "^9.0.0"
numpy = "^1.22"
plotly = "^5.8.2"
kaleido = "0.2.1"
nbmake = "^1.3.2"
setuptools = "^65.5.0"
xarray = "^2022.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
pyflakes = "2.4.*"
pylama = "8.2.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
