[tool.poetry]
name = "wattile"
version = "0.2.0"
description = """\
Probabilistic Deep Learning-based Forecasting of Building Energy ConsumptionProbabilistic \
Deep Learning-based Forecasting of Building Energy Consumption.\
"""
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/NREL/Wattile"

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.2"
scipy = "^1.14"
tables = "^3.10"
seaborn = "^0.13"
tensorboardX = "2.6"
psutil = "^6.0"
matplotlib = "^3.9"
torch = "~2.4"
tensorboard = "^2.16"
Pillow = "^10.4"
numpy = "^2.1"
plotly = "^5.23"
kaleido = "0.2.1"
nbmake = "^1.5"
setuptools = "^73.0"
xarray = "^2024.7.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.0.4"
black = "^24.8"
isort = "^5.13"
pyflakes = "2.5.*"
pylama = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
